# bazel-buildkite-example

./: .bazelrc  .gitignore  MODULE.bazel  README.md  jq
.buildkite/: generate-pipeline.py  generate-step.py  pipeline.py  pipeline.yml  step.py  template.yml  utils.py
.buildkite/hooks/: post-checkout
app/: BUILD.bazel  main.py  requirements.txt  requirements_lock.txt  test_main.py
package/: __init__.py  hello.py  pyproject.toml  test_hello.py
pipeline/: BUILD.bazel  main.py
